--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,6 @@
 		<logback.version>1.2.3</logback.version>
 		<logback-ext.version>0.1.4</logback-ext.version>
 		<!-- tools version setting -->
-		<slf4j.version>1.7.7</slf4j.version>
 		<slf4j-api.version>1.7.25</slf4j-api.version>
 		<log4j.version>1.2.17</log4j.version>
 		<slf4j-log4j12.version>1.7.25</slf4j-log4j12.version>
@@ -66,7 +65,7 @@
 		<beetl.version>2.7.14</beetl.version>
 		<ognl.version>3.2.1</ognl.version>
 		<!-- jdbc driver setting -->
-		<mysql.driver.version>5.1.40</mysql.driver.version>
+		<mysql.driver.version>5.1.41</mysql.driver.version>
 		<druid.version>1.0.27</druid.version>
 		<cglib-nodep.version>3.2.5</cglib-nodep.version>
 		<jstl.version>1.2</jstl.version>
@@ -217,7 +216,7 @@
 			<artifactId>spring-websocket</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		<!--  -->
+		<!-- -->
 		<dependency>
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session</artifactId>
@@ -238,6 +237,11 @@
 		<dependency>
 			<groupId>org.mybatis.generator</groupId>
 			<artifactId>mybatis-generator-core</artifactId>
+			<version>${mybatis-generator-core.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis.generator</groupId>
+			<artifactId>mybatis-generator-maven-plugin</artifactId>
 			<version>${mybatis-generator-core.version}</version>
 		</dependency>
 		<dependency>
@@ -412,22 +416,14 @@
 			<artifactId>log4j-over-slf4j</artifactId>
 			<version>${slf4j-api.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jcl-over-slf4j</artifactId>
-			<version>${slf4j-api.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>${slf4j-log4j12.version}</version>
-		</dependency>
+		<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-log4j12</artifactId> 
+			<version>${slf4j-log4j12.version}</version> </dependency> -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
 			<version>${jcl-over-slf4j.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jul-to-slf4j</artifactId>
@@ -576,7 +572,7 @@
 			<artifactId>jzlib</artifactId>
 			<version>${jzlib.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
@@ -642,7 +638,7 @@
 			<artifactId>elasticsearch</artifactId>
 			<version>${elasticsearch.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
@@ -678,6 +674,12 @@
 					<warSourceDirectory>WebContent</warSourceDirectory>
 				</configuration>
 			</plugin>
+ 	<plugin>
+      	  <groupId>org.mybatis.generator</groupId>
+      	  <artifactId>mybatis-generator-maven-plugin</artifactId>
+          <version>${mybatis-generator-core.version}</version>
+        </plugin>
+
 		</plugins>
 	</build>
 </project>
