--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 		<logback-ext.version>0.1.4</logback-ext.version>
 		<!-- tools version setting -->
 		<slf4j-api.version>1.7.25</slf4j-api.version>
-		<log4j.version>1.2.17</log4j.version>
+		<log4j-core.version>2.8.2</log4j-core.version>
 		<slf4j-log4j12.version>1.7.25</slf4j-log4j12.version>
 		<jcl-over-slf4j.version>1.7.25</jcl-over-slf4j.version>
 		<jul-to-slf4j.version>1.7.25</jul-to-slf4j.version>
@@ -401,11 +401,12 @@
 			<version>${paranamer.version}</version>
 		</dependency>
 
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>${log4j.version}</version>
-		</dependency>
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>${log4j-core.version}</version>
+</dependency>
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
