--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
 		<!-- -->
 		<snappy-java.version>1.1.4-M3</snappy-java.version>
 		<okhttp.version>3.7.0</okhttp.version>
+		<okio.version>1.12.0</okio.version>
 		<elasticsearch.version>5.4.0</elasticsearch.version>
 		<springfox-swagger.version>2.6.1</springfox-swagger.version>
 		<!-- environment setting -->
@@ -401,11 +402,11 @@
 			<version>${paranamer.version}</version>
 		</dependency>
 
-<dependency>
-    <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j-core</artifactId>
-    <version>${log4j-core.version}</version>
-</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>${log4j-core.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -634,6 +635,13 @@
 			<artifactId>okhttp</artifactId>
 			<version>${okhttp.version}</version>
 		</dependency>
+	<dependency>
+			<groupId>com.squareup.okio</groupId>
+			<artifactId>okio</artifactId>
+			<version>${okio.version}</version>
+		</dependency>
+		<!-- -->
+
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
@@ -675,11 +683,11 @@
 					<warSourceDirectory>WebContent</warSourceDirectory>
 				</configuration>
 			</plugin>
- 	<plugin>
-      	  <groupId>org.mybatis.generator</groupId>
-      	  <artifactId>mybatis-generator-maven-plugin</artifactId>
-          <version>${mybatis-generator-core.version}</version>
-        </plugin>
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>${mybatis-generator-core.version}</version>
+			</plugin>
 
 		</plugins>
 	</build>
