--- a/pom.xml
+++ b/pom.xml
@@ -485,7 +485,7 @@
 		</dependency>
 		<!-- jstl -->
 		<dependency>
-			<groupId>javax.servlet.jsp.jstl</groupId>
+			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>${jstl.version}</version>
 		</dependency>
