--- a/WebContent/config/jdbc.properties
+++ b/WebContent/config/jdbc.properties
@@ -1,8 +1,8 @@
 druid.driverClassName=com.mysql.jdbc.Driver
 #druid.url=jdbc:mysql://127.0.0.1:3306/yxt?useUnicode=true&amp;characterEncoding=UTF-8&useSSL=false
-druid.url=jdbc:mysql://127.0.0.1:3306/mj_admin?useUnicode=true&amp;characterEncoding=UTF-8&useSSL=false&autoReconnect=true
+druid.url=jdbc:mysql://127.0.0.1:3306/game_platform?useUnicode=true&amp;characterEncoding=UTF-8&useSSL=false&autoReconnect=true
 druid.username=root
-druid.password=Admin!@#123456qhj
+druid.password=987654321
 #druid.password=75A4Ykwu9fW@
 #druid_config
 #配置监控统计拦截的filters，去掉后监控界面sql无法统计
